# grad_courses

./: .gitignore  .gitmodules  README.md
601.605/: Makefile
601.605/assignments/: agile_vs_devops.tex
601.605/assignments/03/: entity_classes.mdj
601.605/exams/01/: 01.tex
601.605/exams/final/: final.tex
601.605/quiz/: 03.tex  final.tex
601.611/assn/01/: 01.tex
601.611_foundations_of_computer_architecture/assn/01/: 01.tex  negative.c  snippets.c  upper_case.c
601.611_foundations_of_computer_architecture/assn/02/: 02.tex  10a.circ  10b.circ  10c.circ
601.611_foundations_of_computer_architecture/assn/03/: 01.circ  02.circ  03.circ  04.circ  05.circ
601.611_foundations_of_computer_architecture/assn/04/: 04.tex  mult.py  snippets.py
601.611_foundations_of_computer_architecture/assn/05/: OneAddress.circ
601.611_foundations_of_computer_architecture/assn/06/: 06a.tex  06b.asm  06b.tex
601.611_foundations_of_computer_architecture/assn/07/: 07.tex
601.611_foundations_of_computer_architecture/assn/08/: 08.tex
601.611_foundations_of_computer_architecture/assn/09/: 09a.tex
601.621/assn/01/: 01.ipynb  01.tex
601.621_foundations_of_algorithms/assn/02/: 02.ipynb
601.621_foundations_of_algorithms/assn/03/: 03.ipynb
601.621_foundations_of_algorithms/assn/04/: 04.ipynb
601.621_foundations_of_algorithms/assn/05/: 05.ipynb
601.621_foundations_of_algorithms/assn/06/: 06.ipynb
601.621_foundations_of_algorithms/assn/07/: 07.ipynb
601.621_foundations_of_algorithms/exams/01/: scratch.ipynb
601.621_foundations_of_algorithms/proj/: final.ipynb  kickstart.ipynb  midpoint.ipynb
601_foundations_of_software_engineering/exams/02/: 02.tex
604_object-oriented_programming_with_c++/assn/01/: 02.cpp
604_object-oriented_programming_with_c++/assn/02/: 01.cpp  02.mdj  Makefile  date.hpp
604_object-oriented_programming_with_c++/assn/04/: myarray.cpp  myarray.hpp
604_object-oriented_programming_with_c++/assn/08/: Makefile  date.cpp  date.hpp  templatearray.hpp
604_object-oriented_programming_with_c++/assn/09/: state.cpp  state.hpp
604_object-oriented_programming_with_c++/proj/01/: Makefile  item.hpp  proj1.mdj  ui.cpp  ui.hpp  wallet.cpp
604_object-oriented_programming_with_c++/proj/02/: proj2.cpp  rng.cpp  simulation.cpp  simulation.hpp  uml.mdj
605.601_foundations_of_software_engineering/assn/03/: 03.tex
605.604_object-oriented_programming_with_c++/: .gitignore
605.604_object-oriented_programming_with_c++/assn/01/: 01.cpp  02.cpp  Makefile
605.604_object-oriented_programming_with_c++/assn/02/: 01.cpp  Makefile  date.cpp  (+1 more)
605.611_foundations_of_computer_architecture/: Makefile
605.621_foundations_of_algorithms/proj/: kickstart.ipynb  midpoint.ipynb
614_system_development_in_unix/: .gitignore
614_system_development_in_unix/disc/: 03.md  05.md  05.sh  06.md  07.md  10-11.md  12.md  14.md
615_compiler_design_with_llvm/: .gitignore
615_compiler_design_with_llvm/assn/02/ScannerWithFSM/: ASCII.h  ASCII_SYM.h  CMakeLists.txt  HW1-Driver.cpp  HW1-Input.txt  HW1-Output+count.txt  HW1-Output.txt  README.txt  Token.cpp  Token.h  getKeyword.cpp  getNumber.cpp  getSymbol.cpp  inputError.cpp
615_compiler_design_with_llvm/assn/04_SpreadsheetErrorHandling/: CMakeLists.txt  Errors.txt  FF_List.cpp  FF_List.h  HW4-Input-Discussion-Tests.txt  HW4-Input-Test-0.txt  HW4-Input-Test-1.txt  HW4-Input-Test-2.txt  Parser.cpp  Parser.h  Parser_Util.cpp  README  Scanner.cpp
615_compiler_design_with_llvm/assn/05_CPIRGenEquations/: CMakeLists.txt  Cminus.cpp  Cminus.g4  CminusBaseListener.cpp  CminusBaseListener.h  CminusBaseVisitor.cpp  CminusBaseVisitor.h  CminusLexer.cpp  CminusLexer.h  CminusListener.cpp  CminusListener.h  CminusParser.cpp  CminusParser.h  CminusVisitor.cpp  CminusVisitor.h  Makefile  README  SemPred.h  Semantics.h  Symtab.h  Symtab.hpp
615_compiler_design_with_llvm/assn/05_CPIRGenEquations/C-Input-files/: C-Input-0.txt
615_compiler_design_with_llvm/assn/05_CPIRGenEquations/testFiles/: J_Manno_intFuncNoReturn.c  LC-Test-6.c  LC-Test-6.c.Output  SA-Test-02.c  wchen110_test_2.c.Output  wchen110_test_3.c
615_compiler_design_with_llvm/assn/09_SpreadsheetFuncCall/: CMakeLists.txt  FF_List.h  HW-Input.txt  ID_List.cpp  LLVM_Util.h  Node.cpp  Node.h  Parser.h  Token.h
707_software_patterns/: .gitignore
707_software_patterns/assn/: Makefile  Test1.xml  Test2.xml  Test3.xml  Test4.xml  xml_tester.sh
707_software_patterns/assn/01/prog/src/: .clang-format  Attr.cpp  Attr.hpp  CMakeLists.txt  Document.cpp  Document.hpp  Element.cpp  Element.hpp  NamedNodeMap.cpp  NamedNodeMap.hpp  Node.cpp  Node.hpp  NodeList.hpp  README.txt  Test.cpp  Text.cpp  Text.hpp  XMLSerializer.cpp  XMLSerializer.hpp  XMLTokenizer.cpp  XMLTokenizer.hpp  XMLValidator.cpp  XMLValidator.hpp
707_software_patterns/assn/05/prog/sol/: CMakeLists.txt  XMLTokenizer.H
707_software_patterns/assn/05/prog/src/: Attr.hpp  CMakeLists.txt  Document.cpp  Document.hpp  Element.cpp  Element.hpp  ElementProxy.cpp  ElementProxy.hpp  Node.cpp  Node.hpp  Test.cpp  Text.cpp  Text.hpp  WhitespaceStrategy.hpp  XMLBuilder.cpp  XMLBuilder.hpp  XMLDirector.cpp  XMLDirector.hpp  XMLTokenizer.cpp  XMLTokenizer.hpp
707_software_patterns/assn/13/prog/src/: Attr.hpp  CMakeLists.txt  DOMException.cpp  DOMException.hpp  Flyweight.cpp  Flyweight.hpp  Node.cpp  Node.hpp  NodeFlyweight.cpp  NodeFlyweight.hpp  Text.cpp  Text.hpp  ValidChildren.hpp  WhitespaceStrategy.hpp  XMLFacade.cpp  XMLFacade.hpp  XMLInterpreter.cpp  XMLInterpreter.hpp  XMLSerializer.cpp  XMLSerializer.hpp  XMLValidator.hpp
707_software_patterns/assn/13/prog/src/test/: Test.cpp  Test.hpp  TestBuilder.cpp  TestFacade.cpp  TestInterpreter.cpp  TestIterator.cpp  TestValidator.cpp
707_software_patterns/proj/: Makefile  draft.tex
744_information_retrieval/: .gitignore
744_information_retrieval/exam/: frontcoding.py  response.tex  scratch.py
744_information_retrieval/paper/: Makefile  summary.tex  top.txt
744_information_retrieval/proj/: run.py
assignments/: agile_vs_devops.tex
quiz/: 01.tex  02.tex  Makefile  midterm.tex
(+2586 files in other folders)
